--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    />
+    /> -->
+    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
@@ -17,15 +18,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css"
     />
-    <script src="../js/jquery.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <link rel="stylesheet" href="../style/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body>
     <!-- Lockers Show Section -->
@@ -544,10 +542,9 @@
                       class="form-select countries"
                       name="country"
                       id="countryId"
-                      data-default="Canada"
                     >
                       <!-- <option value="">Select Country</option> -->
-                      <option selected value="canada">Canada</option>
+                      <option value="canada">Canada</option>
                     </select>
                   </div>
                 </div>
@@ -564,7 +561,7 @@
                       name="state"
                     >
                       <!-- <option value="">Select State</option> -->
-                      <option selected value="">Ontario</option>
+                      <option value="" class="addclass">Ontario</option>
                     </select>
                   </div>
                 </div>
@@ -577,7 +574,7 @@
                   <div class="col-md-9">
                     <select id="cityId" class="form-select cities" name="city">
                       <!-- <option value="">Select City</option> -->
-                      <option value="" selected>Mississauga</option>
+                      <option value="" class="addclass">Mississauga</option>
                     </select>
                   </div>
                 </div>
@@ -627,21 +624,13 @@
         </div>
       </div>
     </div>
+    <script src="../js/jquery.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
       $("#countryId").each(function () {
-        $(this).select2({
-          theme: "bootstrap-5",
-          dropdownParent: $(this).parent(),
-        });
-      });
-      $("#stateId").each(function () {
-        $(this).select2({
-          theme: "bootstrap-5",
-          dropdownParent: $(this).parent(),
-        });
-      });
-      $("#cityId").each(function () {
         $(this).select2({
           theme: "bootstrap-5",
           dropdownParent: $(this).parent(),
