add navbar fixed country select tag

--- a/src/html/locker-showpage.html
+++ b/src/html/locker-showpage.html
@@ -13,6 +13,52 @@
     />
   </head>
   <body>
+    <!-- Header -->
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Snail's Application</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark active-tab"
+                  href="locker-showpage.html"
+                  >Locker's Showpage</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark"
+                  href="compartment-interaction.html"
+                >
+                  Compartment Interaction
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="relay-mapping.html"
+                  >Realy Mapping</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <div class="text-center my-5">
       <p>Locker 9001</p>
     </div>
