--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,6 +26,52 @@
     />
   </head>
   <body>
+    <!-- Header -->
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Snail's Application</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link text-dark active-tab" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="locker-showpage.html"
+                  >Locker's Showpage</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark"
+                  href="compartment-interaction.html"
+                >
+                  Compartment Interaction
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="relay-mapping.html"
+                  >Realy Mapping</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <!-- Lockers Show Section -->
     <div class="container-fluid">
       <div class="text-center mt-5 mb-3">
@@ -538,11 +584,7 @@
                     >
                   </div>
                   <div class="col-md-9">
-                    <select
-                      class="form-select countries"
-                      name="country"
-                      id="countryId"
-                    >
+                    <select class="form-select countries" name="country" id="">
                       <!-- <option value="">Select Country</option> -->
                       <option value="canada">Canada</option>
                     </select>
@@ -561,7 +603,7 @@
                       name="state"
                     >
                       <!-- <option value="">Select State</option> -->
-                      <option value="" class="addclass">Ontario</option>
+                      <!-- <option value="" class="addclass">Ontario</option> -->
                     </select>
                   </div>
                 </div>
@@ -574,7 +616,9 @@
                   <div class="col-md-9">
                     <select id="cityId" class="form-select cities" name="city">
                       <!-- <option value="">Select City</option> -->
-                      <option value="" class="addclass">Mississauga</option>
+                      <option value="Mississauga" selected class="addclass">
+                        Mississauga
+                      </option>
                     </select>
                   </div>
                 </div>
