--- a/src/html/relay-mapping.html
+++ b/src/html/relay-mapping.html
@@ -13,12 +13,58 @@
     />
   </head>
   <body>
+    <!-- Header -->
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Snail's Application</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="locker-showpage.html"
+                  >Locker's Showpage</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark"
+                  href="compartment-interaction.html"
+                >
+                  Compartment Interaction
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-dark active-tab"
+                  href="relay-mapping.html"
+                  >Realy Mapping</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <div class="container mt-5 unit">
       <div class="text-center mb-5">
         <h4>Compartment Mapping in the Web Application</h4>
       </div>
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-md-4">
           <div class="card">
             <div class="card-body">
               <div class="row justify-content-between">
@@ -80,7 +126,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-md-6">
           <div class="card">
             <div class="card-body">
               <div class="row">
