Fixed City Select 2

--- a/src/html/relay-mapping.html
+++ b/src/html/relay-mapping.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Snail's Application</a>
+          <a class="navbar-brand" href="index.html">Project Snail</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -51,7 +51,7 @@
                 <a
                   class="nav-link text-dark active-tab"
                   href="relay-mapping.html"
-                  >Realy Mapping</a
+                  >Relay Mapping</a
                 >
               </li>
             </ul>
