--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,7 +30,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Snail's Application</a>
+          <a class="navbar-brand" href="index.html">Project Snail</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -64,7 +64,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark" href="relay-mapping.html"
-                  >Realy Mapping</a
+                  >Relay Mapping</a
                 >
               </li>
             </ul>
