--- a/src/html/index.html
+++ b/src/html/index.html
@@ -151,7 +151,14 @@
               </div>
             </a>
             <div class="text-center">
-              <button class="btn btn-danger" type="button">Delete</button>
+              <button
+                class="btn btn-danger delete-btn"
+                data-bs-toggle="modal"
+                data-bs-target="#delete-modal"
+                type="button"
+              >
+                Delete
+              </button>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -217,7 +224,14 @@
               </div>
             </a>
             <div class="text-center">
-              <button class="btn btn-danger" type="button">Delete</button>
+              <button
+                class="btn btn-danger delete-btn"
+                data-bs-toggle="modal"
+                data-bs-target="#delete-modal"
+                type="button"
+              >
+                Delete
+              </button>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -283,7 +297,14 @@
               </div>
             </a>
             <div class="text-center">
-              <button class="btn btn-danger" type="button">Delete</button>
+              <button
+                class="btn btn-danger delete-btn"
+                data-bs-toggle="modal"
+                data-bs-target="#delete-modal"
+                type="button"
+              >
+                Delete
+              </button>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -349,7 +370,14 @@
               </div>
             </a>
             <div class="text-center">
-              <button class="btn btn-danger" type="button">Delete</button>
+              <button
+                class="btn btn-danger delete-btn"
+                data-bs-toggle="modal"
+                data-bs-target="#delete-modal"
+                type="button"
+              >
+                Delete
+              </button>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -415,7 +443,14 @@
               </div>
             </a>
             <div class="text-center">
-              <button class="btn btn-danger" type="button">Delete</button>
+              <button
+                class="btn btn-danger delete-btn"
+                data-bs-toggle="modal"
+                data-bs-target="#delete-modal"
+                type="button"
+              >
+                Delete
+              </button>
             </div>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -481,7 +516,14 @@
               </div>
             </a>
             <div class="text-center">
-              <button class="btn btn-danger" type="button">Delete</button>
+              <button
+                class="btn btn-danger delete-btn"
+                data-bs-toggle="modal"
+                data-bs-target="#delete-modal"
+                type="button"
+              >
+                Delete
+              </button>
             </div>
           </div>
         </div>
@@ -664,6 +706,33 @@
                 </div>
               </div>
             </form>
+          </div>
+        </div>
+      </div>
+      <!-- Delete Modal -->
+      <div class="modal" tabindex="-1" id="delete-modal">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <h6 class="text-center">Are you sure you want to delete this?</h6>
+              <hr />
+              <div class="text-center">
+                <button class="btn btn-danger" data-bs-dismiss="modal">
+                  Yes, Delete
+                </button>
+                <button class="btn btn-secondary ms-3" data-bs-dismiss="modal">
+                  Cancel
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
