--- a/src/html/compartment-interaction.html
+++ b/src/html/compartment-interaction.html
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../bootstrap/bootstrap.css" />
-    <link rel="stylesheet" href="../style/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+  <div id="head-tag"></div>
   <body>
     <!-- Header -->
     <div id="header"></div>
@@ -219,6 +208,7 @@
     <script>
       $(function () {
         $("#header").load("header.html");
+        $("#head-tag").load("head-tag.html");
       });
     </script>
   </body>
