--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,30 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    /> -->
-    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css"
-    />
-    <link rel="stylesheet" href="../style/style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+  <div id="head-tag"></div>
   <body>
     <!-- Header -->
     <div id="header"></div>
@@ -698,16 +674,9 @@
     <script src="../js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
-      $("#countryId").each(function () {
-        $(this).select2({
-          theme: "bootstrap-5",
-          dropdownParent: $(this).parent(),
-        });
-      });
-    </script>
-    <script>
       $(function () {
         $("#header").load("header.html");
+        $("#head-tag").load("head-tag.html");
       });
     </script>
   </body>
